--- a/index.html
+++ b/index.html
@@ -9,5 +9,26 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+   
+    <footer> 
+      <a class="iconoSocial" href="https://www.instagram.com/ysc.arte/" target="_blank">
+          <ion-icon name="logo-instagram" size="large"></ion-icon>
+      </a>
+      <a class="iconoSocial" href="https://facebook.com/profile.php?id=100067224834848&_rdr" target="_blank">
+          <ion-icon name="logo-facebook" size="large"></ion-icon>
+      </a>
+      <a class="iconoSocial" href="https://ar.pinterest.com/canoyaniras/" target="_blank">
+          <ion-icon name="logo-pinterest" size="large"></ion-icon> 
+      </a>
+      
+          <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+          <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+      </footer>
   </body>
 </html>
